# cursor_application

./: .env.example  .gitignore  bootstrap.sh  implementation_plan.md  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
corpora/jailbreaks/: dan_v1.meta.json  dan_v1.txt  dan_v10.meta.json  dan_v10.txt  encoding_base64.meta.json  encoding_rot13.meta.json  multi_turn_slow_burn.meta.json  multi_turn_slow_burn.txt  role_play_basic.meta.json  role_play_basic.txt  role_play_polished.meta.json
corpora/prompt_injection/: 01_direct_override_L1.meta.json  01_direct_override_L1.txt  02_direct_override_L2.meta.json  02_direct_override_L2.txt  03_direct_override_L3.meta.json  03_direct_override_L3.txt  04_direct_override_L4.meta.json  04_direct_override_L4.txt  05_direct_override_L5.meta.json  05_direct_override_L5.txt  06_role_play_L1.meta.json  06_role_play_L1.txt  07_role_play_L2.meta.json  07_role_play_L2.txt  08_role_play_L3.meta.json  08_role_play_L3.txt  09_role_play_L4.meta.json  09_role_play_L4.txt  10_role_play_L5.meta.json  10_role_play_L5.txt  11_encoding_L1.meta.json  11_encoding_L1.txt  12_encoding_L2.meta.json  12_encoding_L2.txt  13_encoding_L3.meta.json  13_encoding_L3.txt  14_encoding_L4.meta.json  14_encoding_L4.txt  15_encoding_L5.meta.json  15_encoding_L5.txt  16_multi_turn_L1.meta.json  16_multi_turn_L1.txt  17_multi_turn_L2.meta.json  17_multi_turn_L2.txt  18_multi_turn_L3.meta.json  18_multi_turn_L3.txt  19_multi_turn_L4.meta.json  19_multi_turn_L4.txt  20_multi_turn_L5.meta.json  20_multi_turn_L5.txt  (+51 more)
corpora/slopsquatting/: README.md  prompts.txt
corpora/unicode_bidi/: pillar_rules_file_backdoor.meta.json  pillar_rules_file_backdoor.txt
docs/: cursor-ui-observations.md
harness/electron/: launch.ts
harness/observers/: fs-watch.ts  heap-snapshot.ts  log-scraper.ts  mitm-record.ts  perf-sample.ts
harness/reporters/: bug-md.ts  playwright-bug-reporter.ts  voc-jsonl.ts
prompts/: antigravity-stage-1.md  claude-code-stage-1.md
tooling/: telegram_bot.py  telegram_preflight.py
vms/tart/: setup.sh  (+2 more)
(+69 files in other folders)
